syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (User) {}
  rpc FindAllUsers (Empty) returns (UsersResponse) {}
  rpc FindUser (FindUserRequest) returns (User) {}
}

message Empty {}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message FindUserRequest {
  string id = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UsersResponse {
  repeated User users = 1;
}